@@ -2,6 +2,7 @@ package ru.practicum.shareit.exception;
 
 import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -15,35 +16,58 @@ import java.util.stream.Collectors;
 @Slf4j
 public class ErrorHandlingControllerAdvice {
 
-    @ExceptionHandler(ConstraintViolationException.class)
+    @ExceptionHandler({
+            ConstraintViolationException.class,
+            MethodArgumentNotValidException.class,
+            NotAvailableItem.class,
+            WrongDateException.class,
+            AccessDeniedException.class,
+            BookingStatusException.class
+    })
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ValidationErrorResponse onConstraintValidationException(ConstraintViolationException e) {
-        final List<Violation> violations = e.getConstraintViolations().stream().map(violation -> new Violation(violation.getPropertyPath().toString(), violation.getMessage())).collect(Collectors.toList());
-        return new ValidationErrorResponse(violations);
+    public ErrorResponse handleBadRequestExceptions(Exception e) {
+        if (e instanceof ConstraintViolationException) {
+            ConstraintViolationException ex = (ConstraintViolationException) e;
+            final List<Violation> violations = ex.getConstraintViolations().stream()
+                    .map(violation -> new Violation(violation.getPropertyPath().toString(), violation.getMessage()))
+                    .toList();
+            return new ErrorResponse(violations.toString());
+        } else if (e instanceof MethodArgumentNotValidException) {
+            MethodArgumentNotValidException ex = (MethodArgumentNotValidException) e;
+            final List<Violation> violations = ex.getBindingResult().getFieldErrors().stream()
+                    .map(error -> new Violation(error.getField(), error.getDefaultMessage()))
+                    .toList();
+            return new ErrorResponse(violations.toString());
+        } else {
+            return new ErrorResponse(e.getMessage());
+        }
     }
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ValidationErrorResponse onMethodArgumentNotValidException(MethodArgumentNotValidException e) {
-        final List<Violation> violations = e.getBindingResult().getFieldErrors().stream().map(error -> new Violation(error.getField(), error.getDefaultMessage())).collect(Collectors.toList());
-        return new ValidationErrorResponse(violations);
-    }
-
-    @ExceptionHandler(IllegalArgumentException.class)
-    @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
-    public ErrorResponse handleIllegalArgumentException(IllegalArgumentException e) {
+    @ExceptionHandler(NotFoundException.class)
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    public ErrorResponse handleNotFoundException(final NotFoundException e) {
+        log.info("NotFound: {}", e.getMessage());
         return new ErrorResponse(e.getMessage());
     }
 
-    @ExceptionHandler(BookingStatusException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleBookingStatusException(final BookingStatusException e) {
-        return new ErrorResponse((e.getMessage()));
+    @ExceptionHandler({
+            DataIntegrityViolationException.class,
+            DuplicateDataException.class
+    })
+    @ResponseStatus(HttpStatus.CONFLICT)
+    public ErrorResponse handleConflictExceptions(Exception e) {
+        if (e instanceof DataIntegrityViolationException) {
+            log.error("Unique constraint violation: {}", e.getMessage());
+            return new ErrorResponse("Email уже существует");
+        } else {
+            return new ErrorResponse(e.getMessage());
+        }
     }
 
-    @ExceptionHandler(RuntimeException.class)
+    @ExceptionHandler(Throwable.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
-    public ErrorResponse handleRuntimeException(final RuntimeException e) {
-        return new ErrorResponse(e.getMessage());
+    public ErrorResponse handleThrowable(final Throwable e) {
+        log.error("Unexpected error: {}", e.getMessage(), e);
+        return new ErrorResponse("Внутренняя ошибка сервера. Пожалуйста, попробуйте позже.");
     }
 }
